@@ -1,4 +1,5 @@
 1.9.3:
+* Tools/BalIO: Remade to use blockexplorer.com since blockr.io isn't working any more
 * Client/WebUI/Blocks: Show fee statistics in relation to transactions' weight, not the size
 * Client: NetRouteInv() was only routing txs to peers which don't use "feefilter"
 * Wallet: decode transaction also shows WTxID now
